package cn.tunyl.builder;

public class Bottle implements Packing{
    @Override
    public String pack() {
        return "Bottle";
    }
}
