package cn.tunyl.builder;

public interface Item {
    String name();
    Packing packing();
    float getCost();
}
