package cn.tunyl.builder;

public interface Packing {
    String pack();
}
