package cn.tunyl.builder;

public class Wrapper implements Packing{
    @Override
    public String pack() {
        return "wrapper";
    }
}
